--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "tracker",
-  "version": "0.0.1",
+  "name": "whalesoft-time-tracker",
+  "version": "0.5.0",
   "main": "main.js",
   "description": "WhaleSoft Time Tracking",
+  "repository": "https://gitlab.com/whalesoft/time-tracker/",
+  "license": "MIT",
   "dependencies": {
     "desktop-screenshot": "^0.1.1",
-    "electron": "^1.7.2",
+    "electron": "^1.6.11",
     "electron-packager": "^8.7.1",
     "electron-prebuilt": "^1.4.13",
-    "electron-winstaller": "^2.6.1",
+    "electron-rebuild": "^1.5.11",
+    "electron-winstaller": "^2.6.3",
     "gulp": "^3.9.1",
     "moment": "^2.18.1",
     "node-notifier": "^5.1.2",
     "node-rest-client": "^3.1.0",
     "resize-img": "^1.1.2",
-    "restler": "^3.4.0"
+    "restler": "^3.4.0",
+    "robotjs": "^0.4.7"
   },
   "scripts": {
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
